--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -130,7 +130,17 @@
          </widget>
         </item>
         <item>
-         <widget class="QSpinBox" name="spinBox"/>
+         <widget class="QSpinBox" name="spinBox">
+          <property name="minimum">
+           <number>10</number>
+          </property>
+          <property name="maximum">
+           <number>75</number>
+          </property>
+          <property name="value">
+           <number>25</number>
+          </property>
+         </widget>
         </item>
        </layout>
       </item>
