--- a/configdialog.ui
+++ b/configdialog.ui
@@ -13,233 +13,259 @@
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
-  <widget class="QGroupBox" name="General">
-   <property name="geometry">
-    <rect>
-     <x>40</x>
-     <y>44</y>
-     <width>219</width>
-     <height>79</height>
-    </rect>
-   </property>
-   <property name="title">
-    <string>General</string>
-   </property>
-   <layout class="QGridLayout" name="gridLayout_2">
-    <item row="0" column="0">
-     <widget class="QLabel" name="label">
-      <property name="text">
-       <string>Mode edición:</string>
-      </property>
-     </widget>
-    </item>
-    <item row="0" column="1">
-     <widget class="QComboBox" name="Modoedicion">
-      <item>
-       <property name="text">
-        <string>DV-PAL</string>
+  <layout class="QGridLayout" name="gridLayout_4">
+   <item row="0" column="0">
+    <layout class="QVBoxLayout" name="verticalLayout">
+     <item>
+      <widget class="QLabel" name="label_6">
+       <property name="styleSheet">
+        <string notr="true">font: 12pt &quot;Calibri&quot;;</string>
        </property>
-      </item>
-      <item>
        <property name="text">
-        <string>DV-NTSC</string>
+        <string>Selecciona la configuració de treball</string>
        </property>
-      </item>
-      <item>
-       <property name="text">
-        <string>HDV </string>
+      </widget>
+     </item>
+     <item>
+      <widget class="QGroupBox" name="General">
+       <property name="title">
+        <string>General</string>
        </property>
-      </item>
-     </widget>
-    </item>
-    <item row="1" column="0">
-     <widget class="QLabel" name="label_2">
-      <property name="text">
-       <string>Base de temps:</string>
-      </property>
-     </widget>
-    </item>
-    <item row="1" column="1">
-     <widget class="QComboBox" name="Framessegundo">
-      <item>
-       <property name="text">
-        <string>25 frames/segundo</string>
+       <layout class="QGridLayout" name="gridLayout_2">
+        <item row="0" column="0">
+         <widget class="QLabel" name="label">
+          <property name="text">
+           <string>Mode edición:</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="1">
+         <widget class="QComboBox" name="Modoedicion">
+          <item>
+           <property name="text">
+            <string>DV-PAL</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>DV-NTSC</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>HDV </string>
+           </property>
+          </item>
+         </widget>
+        </item>
+        <item row="1" column="0">
+         <widget class="QLabel" name="label_2">
+          <property name="text">
+           <string>Base de temps:</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="1">
+         <widget class="QComboBox" name="Framessegundo">
+          <item>
+           <property name="text">
+            <string>25 frames/segundo</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>30 frames/segundo</string>
+           </property>
+          </item>
+         </widget>
+        </item>
+        <item row="0" column="2">
+         <spacer name="horizontalSpacer_2">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>40</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+       </layout>
+      </widget>
+     </item>
+     <item>
+      <widget class="QGroupBox" name="Video">
+       <property name="title">
+        <string>Video</string>
        </property>
-      </item>
-      <item>
-       <property name="text">
-        <string>30 frames/segundo</string>
+       <layout class="QGridLayout" name="gridLayout_3">
+        <item row="0" column="0">
+         <widget class="QLabel" name="label_4">
+          <property name="text">
+           <string>Relació d'aspecte:</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="1">
+         <widget class="QComboBox" name="Aspecto">
+          <item>
+           <property name="text">
+            <string>4:3</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>16:9</string>
+           </property>
+          </item>
+         </widget>
+        </item>
+        <item row="1" column="0">
+         <widget class="QLabel" name="label_3">
+          <property name="text">
+           <string>Mide de cuadre:</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="1">
+         <widget class="QComboBox" name="Tamanycuadre">
+          <item>
+           <property name="text">
+            <string>720×576 (PAL)</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>720×480 (NTSC)</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>1280 × 720 (HD READY)</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>1920 × 1080 (FULL HD)</string>
+           </property>
+          </item>
+         </widget>
+        </item>
+        <item row="0" column="2">
+         <spacer name="horizontalSpacer_3">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>40</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+       </layout>
+      </widget>
+     </item>
+     <item>
+      <widget class="QGroupBox" name="Camaras">
+       <property name="title">
+        <string>Càmeras</string>
        </property>
-      </item>
-     </widget>
-    </item>
-   </layout>
-  </widget>
-  <widget class="QGroupBox" name="Video">
-   <property name="geometry">
-    <rect>
-     <x>40</x>
-     <y>134</y>
-     <width>256</width>
-     <height>79</height>
-    </rect>
-   </property>
-   <property name="title">
-    <string>Video</string>
-   </property>
-   <layout class="QGridLayout" name="gridLayout_3">
-    <item row="0" column="0">
-     <widget class="QLabel" name="label_4">
-      <property name="text">
-       <string>Relació d'aspecte:</string>
-      </property>
-     </widget>
-    </item>
-    <item row="0" column="1">
-     <widget class="QComboBox" name="Aspecto">
-      <item>
-       <property name="text">
-        <string>4:3</string>
-       </property>
-      </item>
-      <item>
-       <property name="text">
-        <string>16:9</string>
-       </property>
-      </item>
-     </widget>
-    </item>
-    <item row="1" column="0">
-     <widget class="QLabel" name="label_3">
-      <property name="text">
-       <string>Mide de cuadre:</string>
-      </property>
-     </widget>
-    </item>
-    <item row="1" column="1">
-     <widget class="QComboBox" name="Tamanycuadre">
-      <item>
-       <property name="text">
-        <string>720×576 (PAL)</string>
-       </property>
-      </item>
-      <item>
-       <property name="text">
-        <string>720×480 (NTSC)</string>
-       </property>
-      </item>
-      <item>
-       <property name="text">
-        <string>1280 × 720 (HD READY)</string>
-       </property>
-      </item>
-      <item>
-       <property name="text">
-        <string>1920 × 1080 (FULL HD)</string>
-       </property>
-      </item>
-     </widget>
-    </item>
-   </layout>
-  </widget>
-  <widget class="QGroupBox" name="Camaras">
-   <property name="geometry">
-    <rect>
-     <x>40</x>
-     <y>224</y>
-     <width>181</width>
-     <height>53</height>
-    </rect>
-   </property>
-   <property name="title">
-    <string>Càmeras</string>
-   </property>
-   <layout class="QGridLayout" name="gridLayout">
-    <item row="0" column="0">
-     <widget class="QLabel" name="label_5">
-      <property name="text">
-       <string>Nombre de Càmeras</string>
-      </property>
-     </widget>
-    </item>
-    <item row="0" column="1">
-     <widget class="QComboBox" name="NumCam">
-      <item>
-       <property name="text">
-        <string>1-CAM</string>
-       </property>
-      </item>
-      <item>
-       <property name="text">
-        <string>2-CAM</string>
-       </property>
-      </item>
-      <item>
-       <property name="text">
-        <string>3-CAM</string>
-       </property>
-      </item>
-      <item>
-       <property name="text">
-        <string>4-CAM</string>
-       </property>
-      </item>
-      <item>
-       <property name="text">
-        <string>5-CAM</string>
-       </property>
-      </item>
-      <item>
-       <property name="text">
-        <string>6-CAM</string>
-       </property>
-      </item>
-     </widget>
-    </item>
-   </layout>
-  </widget>
-  <widget class="QPushButton" name="Aceptar">
-   <property name="geometry">
-    <rect>
-     <x>240</x>
-     <y>280</y>
-     <width>75</width>
-     <height>23</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Aceptar</string>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="CancelarBoton">
-   <property name="geometry">
-    <rect>
-     <x>330</x>
-     <y>280</y>
-     <width>75</width>
-     <height>23</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Cancelar</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_6">
-   <property name="geometry">
-    <rect>
-     <x>20</x>
-     <y>20</y>
-     <width>281</width>
-     <height>16</height>
-    </rect>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">font: 12pt &quot;Calibri&quot;;</string>
-   </property>
-   <property name="text">
-    <string>Selecciona la configuració de treball</string>
-   </property>
-  </widget>
+       <layout class="QGridLayout" name="gridLayout">
+        <item row="0" column="0">
+         <widget class="QLabel" name="label_5">
+          <property name="text">
+           <string>Nombre de Càmeras</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="1">
+         <widget class="QComboBox" name="NumCam">
+          <item>
+           <property name="text">
+            <string>1-CAM</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>2-CAM</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>3-CAM</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>4-CAM</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>5-CAM</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>6-CAM</string>
+           </property>
+          </item>
+         </widget>
+        </item>
+        <item row="0" column="2">
+         <spacer name="horizontalSpacer_4">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>40</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+       </layout>
+      </widget>
+     </item>
+     <item>
+      <layout class="QHBoxLayout" name="horizontalLayout">
+       <item>
+        <spacer name="horizontalSpacer">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>40</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item>
+        <widget class="QPushButton" name="Aceptar">
+         <property name="text">
+          <string>Aceptar</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="CancelarBoton">
+         <property name="text">
+          <string>Cancelar</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </item>
+    </layout>
+   </item>
+  </layout>
  </widget>
  <resources/>
  <connections>
