--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -169,59 +169,13 @@
         </item>
        </layout>
       </item>
-      <item row="4" column="0">
-       <layout class="QGridLayout" name="gridLayout_3">
-        <item row="1" column="0">
-         <widget class="QLabel" name="InfoQThread1">
-          <property name="text">
-           <string>CAM 1:</string>
-          </property>
-         </widget>
-        </item>
-        <item row="2" column="0">
-         <widget class="QLabel" name="InfoQThread2">
-          <property name="text">
-           <string>CAM 2:</string>
-          </property>
-         </widget>
-        </item>
-        <item row="3" column="0">
-         <widget class="QLabel" name="InfoQThread3">
-          <property name="text">
-           <string>CAM 3:</string>
-          </property>
-         </widget>
-        </item>
-        <item row="4" column="0">
-         <widget class="QLabel" name="InfoQThread4">
-          <property name="text">
-           <string>CAM 4:</string>
-          </property>
-         </widget>
-        </item>
-        <item row="0" column="1">
-         <widget class="QLabel" name="label">
-          <property name="text">
-           <string>cvQuery (S) </string>
-          </property>
-         </widget>
-        </item>
-        <item row="0" column="2">
-         <widget class="QLabel" name="label_2">
-          <property name="text">
-           <string>Bucle run (S)</string>
-          </property>
-         </widget>
-        </item>
-       </layout>
-      </item>
       <item row="3" column="0">
        <widget class="QLabel" name="Informaciotempsexecucio">
         <property name="frameShape">
          <enum>QFrame::StyledPanel</enum>
         </property>
         <property name="text">
-         <string>Informació d'execució</string>
+         <string>Àudio</string>
         </property>
         <property name="alignment">
          <set>Qt::AlignCenter</set>
@@ -254,10 +208,26 @@
         </property>
        </spacer>
       </item>
+      <item row="3" column="3">
+       <spacer name="horizontalSpacer_3">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>40</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+      <item row="4" column="0">
+       <layout class="QGridLayout" name="gridLayout_3"/>
+      </item>
       <item row="4" column="3">
        <widget class="QTabWidget" name="tabWidget">
         <property name="currentIndex">
-         <number>2</number>
+         <number>0</number>
         </property>
         <widget class="QWidget" name="tab">
          <attribute name="title">
@@ -584,19 +554,6 @@
          </widget>
         </widget>
        </widget>
-      </item>
-      <item row="3" column="3">
-       <spacer name="horizontalSpacer_3">
-        <property name="orientation">
-         <enum>Qt::Horizontal</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>40</width>
-          <height>20</height>
-         </size>
-        </property>
-       </spacer>
       </item>
      </layout>
     </item>
