--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Video system</string>
+   <string>Video System</string>
   </property>
   <property name="styleSheet">
    <string notr="true"/>
