Afegeixo nous elements per treballar amb àudio i un nou mètode Entrada_audio() per obtenir juntament amb el vídeo l'àudio.

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -233,7 +233,18 @@
        </spacer>
       </item>
       <item row="5" column="0">
-       <layout class="QGridLayout" name="gridLayout_3"/>
+       <layout class="QGridLayout" name="gridLayout_3">
+        <item row="0" column="0">
+         <widget class="QSlider" name="audioSlider">
+          <property name="maximum">
+           <number>10</number>
+          </property>
+          <property name="orientation">
+           <enum>Qt::Vertical</enum>
+          </property>
+         </widget>
+        </item>
+       </layout>
       </item>
       <item row="3" column="0">
        <widget class="QLabel" name="label">
