--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -13,6 +13,10 @@
   <property name="windowTitle">
    <string>Video System</string>
   </property>
+  <property name="windowIcon">
+   <iconset resource="recursos.qrc">
+    <normaloff>:/iconos/images/iconovideocamara.png</normaloff>:/iconos/images/iconovideocamara.png</iconset>
+  </property>
   <property name="styleSheet">
    <string notr="true"/>
   </property>
@@ -264,14 +268,14 @@
        </widget>
       </item>
       <item row="5" column="3">
-       <widget class="QTabWidget" name="tabWidget">
+       <widget class="QTabWidget" name="tab_fitxers">
         <property name="font">
          <font>
           <pointsize>10</pointsize>
          </font>
         </property>
         <property name="currentIndex">
-         <number>1</number>
+         <number>2</number>
         </property>
         <widget class="QWidget" name="tab_transicions">
          <attribute name="title">
@@ -292,6 +296,38 @@
            </rect>
           </property>
           <layout class="QHBoxLayout" name="horizontalLayout_audio"/>
+         </widget>
+        </widget>
+        <widget class="QWidget" name="tab">
+         <attribute name="title">
+          <string>Fitxers</string>
+         </attribute>
+         <widget class="QToolButton" name="addButton">
+          <property name="geometry">
+           <rect>
+            <x>250</x>
+            <y>10</y>
+            <width>24</width>
+            <height>25</height>
+           </rect>
+          </property>
+          <property name="text">
+           <string>...</string>
+          </property>
+          <property name="icon">
+           <iconset resource="recursos.qrc">
+            <normaloff>:/iconos/images/iconosuma.png</normaloff>:/iconos/images/iconosuma.png</iconset>
+          </property>
+         </widget>
+         <widget class="QListWidget" name="listWidget">
+          <property name="geometry">
+           <rect>
+            <x>10</x>
+            <y>10</y>
+            <width>231</width>
+            <height>192</height>
+           </rect>
+          </property>
          </widget>
         </widget>
         <widget class="QWidget" name="tab_titols">
@@ -720,6 +756,10 @@
           <property name="text">
            <string>Stream</string>
           </property>
+          <property name="icon">
+           <iconset resource="recursos.qrc">
+            <normaloff>:/iconos/images/iconostreaming.png</normaloff>:/iconos/images/iconostreaming.png</iconset>
+          </property>
          </widget>
         </item>
        </layout>
@@ -762,24 +802,20 @@
    <addaction name="menuAjuda"/>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
-  <action name="actionNou">
-   <property name="text">
-    <string>Nou</string>
-   </property>
-  </action>
-  <action name="actionSortir">
-   <property name="text">
-    <string>Sortir</string>
-   </property>
-  </action>
   <action name="actionNova">
    <property name="text">
     <string>Nova</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+N</string>
    </property>
   </action>
   <action name="actionSortir_2">
    <property name="text">
     <string>Sortir</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+S</string>
    </property>
   </action>
   <action name="actionAjuda_de_Capturadora">
@@ -794,6 +830,8 @@
   </action>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
- <resources/>
+ <resources>
+  <include location="recursos.qrc"/>
+ </resources>
  <connections/>
 </ui>
