Simplifico la part d'àudio, trec el previu. Activo la introducció de logo, la incompatibilitat amb l'àudio estava en el audiomixer (enlloc de liveadder -> adder).

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -615,7 +615,7 @@
 </string>
            </property>
            <property name="text">
-            <string>TextLabel</string>
+            <string/>
            </property>
           </widget>
          </widget>
@@ -757,7 +757,7 @@
 </string>
            </property>
            <property name="text">
-            <string>TextLabel</string>
+            <string/>
            </property>
           </widget>
          </widget>
