Millora del menú entrada des de fitxer per posar i treure els vídeos.

--- a/recursos.qrc
+++ b/recursos.qrc
@@ -1,7 +1,8 @@
 <RCC>
     <qresource prefix="/iconos">
-        <file>images/iconosuma.png</file>
         <file>images/iconovideocamara.png</file>
         <file>images/iconostreaming.png</file>
+        <file>images/iconoadd.png</file>
+        <file>images/iconoremove.png</file>
     </qresource>
 </RCC>
