--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -360,7 +360,13 @@
           </property>
           <property name="icon">
            <iconset resource="recursos.qrc">
-            <normaloff>:/iconos/images/iconosuma.png</normaloff>:/iconos/images/iconosuma.png</iconset>
+            <normaloff>:/iconos/images/iconoadd.png</normaloff>:/iconos/images/iconoadd.png</iconset>
+          </property>
+          <property name="iconSize">
+           <size>
+            <width>16</width>
+            <height>16</height>
+           </size>
           </property>
          </widget>
          <widget class="QListWidget" name="listWidget">
@@ -371,6 +377,29 @@
             <width>231</width>
             <height>192</height>
            </rect>
+          </property>
+         </widget>
+         <widget class="QToolButton" name="removeButton">
+          <property name="geometry">
+           <rect>
+            <x>250</x>
+            <y>40</y>
+            <width>24</width>
+            <height>25</height>
+           </rect>
+          </property>
+          <property name="text">
+           <string>...</string>
+          </property>
+          <property name="icon">
+           <iconset resource="recursos.qrc">
+            <normaloff>:/iconos/images/iconoremove.png</normaloff>:/iconos/images/iconoremove.png</iconset>
+          </property>
+          <property name="iconSize">
+           <size>
+            <width>16</width>
+            <height>16</height>
+           </size>
           </property>
          </widget>
         </widget>
