--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -243,6 +243,9 @@
           <property name="maximum">
            <number>10</number>
           </property>
+          <property name="value">
+           <number>0</number>
+          </property>
           <property name="orientation">
            <enum>Qt::Vertical</enum>
           </property>
@@ -536,7 +539,7 @@
             <string>Selecciona</string>
            </property>
           </widget>
-          <widget class="QCheckBox" name="checkBox_3">
+          <widget class="QCheckBox" name="checkBox_insereixlogo">
            <property name="geometry">
             <rect>
              <x>66</x>
